misc: 取消使用那些在 Java 15 还在 preview 的特性